--- a/HashTable/HashTable.vcxproj
+++ b/HashTable/HashTable.vcxproj
@@ -112,6 +112,9 @@
   <ItemGroup>
     <ClInclude Include="HashTable.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="HashTable.c" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
